increased max. heap size for TOOL calls